codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 工 作 中  (0s • esc 可 中 断 )    
                              
                              
› Ask Codex to do anything    
                              
           100% context left
